Try to fix scrollbars

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -9,9 +9,10 @@ body {
   height: 100%;
   margin: 0;
   font-family: "Schoolbell", sans-serif;
-  font-size: 22px;
+  font-size: 18px;
   /* sync with View.Colors.background */
   background-color: #d4d4d4;
+  overflow: auto;
 }
 #canvas-main {
   position: fixed;
